--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>aula 1</title>
 </head>
 <body>
-    <h1>minha primeira aula de github com vscode</h1>
+    <header class="cabecalho">
+    <h1 class="cabecalho_titulo">Minha primeira aula ge github com vscode.</h1>
+<nav class="cabecalho_menu">
+    <a href="#">HOME</a>
+    <a href="#">Quem somos</a>
+</nav>
+    </header>
 </body>
 </html>
