--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="cabecalho">
-    <h1 class="cabecalho_titulo">Minha primeira aula ge github com vscode.</h1>
+    <h1 class="cabecalho_titulo">Minha primeira aula de github com vscode.</h1>
 <nav class="cabecalho_menu">
     <a href="#">HOME</a>
     <a href="#">Quem somos</a>
